# miramail

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml
examples/: read_unread_inbox_and_answer_questions.py
miramail/: __init__.py  main.py  miramail.py
miramail/gmail/: __init__.py  attachment.py  client.py  draft.py  label.py  message.py  schemas.py  thread.py
tests/: test_miramail.py
